[package]
name = "rust-wfc"
version = "0.1.0"
edition = "2021"
description = "rust-wfc with wasm support"
license = "MIT/Apache-2.0"
repository = "https://github.com/takoyaro/rust-wfc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rand = "0.8.5"
array_tool = "1.0.3"
rayon = "1.5.2"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.68"
wasm-bindgen-test = "0.2"
js-sys = "0.3.57"